connects the DOM to app.js successfully

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,20 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  </head>
 
+  <body>
+    <input type="text" placeholder="Input a JSON Object Here....">
+    <input type="submit" value="Submit" id="submitClick"><br>
+    <input type="text" placeholder="The CSV will be displayed here">
+    <p>
+      
+    </p>
+
+
+    <script src="./app.js"></script>
+  </body>
+
+</html>
 
