completes front end. Only the csv function lef to be written

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -7,12 +7,7 @@
   <body>
     <input type="text" placeholder="Input a JSON Object Here....">
     <input type="submit" value="Submit" id="submitClick"><br>
-    <input type="text" placeholder="The CSV will be displayed here">
-    <p>
-      
-    </p>
-
-
+    <input type="text" placeholder="The CSV will be displayed here" id="output">
     <script src="./app.js"></script>
   </body>
 
